# TRINETRA

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
app/: mockup.html
data/: README.md
docs/: integration.md  model_card.md
frontend/: .gitignore  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  format.ts  types.ts  usePortfolioScores.ts
frontend/src/api/: client.ts  types.ts
frontend/src/components/: AdverseMediaBadge.tsx  BorrowerDrilldown.tsx  CaptureCurve.tsx  CreditMemo.tsx  Header.tsx  KpiStrip.tsx  Logo.tsx  NewBorrowerForm.tsx  NextActionWorklist.tsx  PdTermStructure.tsx  PortfolioHeatmap.tsx  PortfolioTable.tsx  ReasonCodes.tsx
frontend/src/data/: portfolio.ts
frontend/src/styles/: global.css
scripts/: download_data.sh
src/trinetra/: config.py  identity.py  segments.py
src/trinetra/adapters/: __init__.py  base.py  ltfs.py
src/trinetra/api/: app.py  portfolio.py  service.py
src/trinetra/data/: freddie.py  homecredit.py  ltfs.py
src/trinetra/eval/: benchmark.py  metrics.py
src/trinetra/features/: freddie.py  homecredit.py  ltfs.py
src/trinetra/genai/: adverse_media.py  extract.py  llm.py  memo.py  news.py  ocr.py  text.py
src/trinetra/interpret/: reason_codes.py  taxonomy.py
src/trinetra/models/: gbm.py
src/trinetra/pipelines/: benchmark.py  splits.py  train_ltfs.py  zoo_benchmark.py
src/trinetra/survival/: term_structure.py
tests/: test_adapters.py  test_adverse_media.py  test_api.py  test_api_endpoints.py  test_benchmark.py  test_extract.py  test_features.py  test_genai.py  test_identity.py  test_interpret.py  test_metrics.py  test_next_action.py  test_segments.py  test_survival.py  test_text.py
