[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "trinetra"
version = "0.1.0"
description = "MSME early-warning risk engine: 12-month probability of default with a unified, RBI-aligned interpretation layer."
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "scikit-learn>=1.3",
    "lightgbm>=4.0",
    "xgboost>=2.0",
    "shap>=0.44",
    "lifelines>=0.27",
    "pydantic>=2.5",
    "pydantic-settings>=2.1",
    "python-dotenv>=1.0",
    "httpx>=0.26",
    "fastapi>=0.109",
    "uvicorn>=0.27",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = ["pytest>=7.4", "ruff>=0.2", "mypy>=1.8"]

[project.scripts]
trinetra-train = "trinetra.pipelines.train_ltfs:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
