[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "trinetra"
version = "0.1.0"
description = "MSME early-warning risk engine: 12-month probability of default with a unified, RBI-aligned interpretation layer."
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "scikit-learn>=1.3",
    "lightgbm>=4.0",
    "shap>=0.44",
    "lifelines>=0.27",
    "pydantic>=2.5",
    "pydantic-settings>=2.1",
    "python-dotenv>=1.0",
    "httpx>=0.26",
    "fastapi>=0.109",
    "uvicorn>=0.27",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = ["pytest>=7.4", "pytest-cov>=4.1", "ruff>=0.2", "mypy>=1.8"]

[project.scripts]
trinetra-train = "trinetra.pipelines.train_ltfs:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "--cov=trinetra --cov-report=term-missing --cov-fail-under=85"

[tool.coverage.run]
source = ["trinetra"]
# Offline unit tests cannot exercise the data-download loaders, batch training
# and benchmark pipelines, or the external GenAI service clients (OCR, news),
# all of which need the git-ignored datasets or a running GPU service. Coverage
# is measured over the served API and the modelling library it depends on.
omit = [
    "*/trinetra/pipelines/*",
    "*/trinetra/segments.py",
    "*/trinetra/data/ltfs.py",
    "*/trinetra/data/homecredit.py",
    "*/trinetra/data/freddie.py",
    "*/trinetra/features/homecredit.py",
    "*/trinetra/features/freddie.py",
    "*/trinetra/genai/ocr.py",
    "*/trinetra/genai/news.py",
]

[tool.coverage.report]
skip_covered = false
show_missing = true
